# player

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  player-config  player.sh
src/: Player.cpp  Player.h  ServicePort.h  main.cpp
tests/: test_player.cpp
